# starfish-fl

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  plan.md
cli/: README.md  pyproject.toml
cli/starfish_cli/: main.py
cli/starfish_cli/agent/: agent.py  prompts.py  runner.py  tools.py
cli/tests/: test_agent.py  test_prompts.py  test_runner.py  test_tools.py
controller/: .env.site2  Dockerfile  README.md  TASK_GUIDE.md  USER_GUIDE.md  docker-compose.site2.yml  docker-compose.yml  pyproject.toml  requirements-unet.txt
controller/starfish/: celery.py  settings.py
controller/starfish/controller/: tasks_validator.py  test_ancova.py  test_censored_regression.py  test_cox_proportional_hazards.py  test_diagnostics.py  test_federated_unet.py  test_kaplan_meier.py  test_linear_regression.py  test_logistic_regression.py  test_logistic_regression_stats.py  test_mixed_effects_logistic_regression.py  test_multiple_imputation.py  test_negative_binomial_regression.py  test_ordinal_logistic_regression.py  test_poisson_regression.py  test_r_censored_regression.py  test_r_cox_proportional_hazards.py  test_r_kaplan_meier.py  test_r_logistic_regression.py  test_r_multiple_imputation.py  test_r_negative_binomial_regression.py  test_r_poisson_regression.py  test_regression_cox_ph.py  test_svm_regression.py  views.py
controller/starfish/controller/agent/: engine.py  hooks.py  prompts.py
controller/starfish/controller/agent/tests/: test_engine.py  test_hooks.py  test_integration.py  test_prompts.py
controller/starfish/controller/file/: file_utils.py
controller/starfish/controller/fixtures/veteran/: README.md  generate_reference.R  veteran_py.csv  veteran_r.csv
controller/starfish/controller/tasks/: abstract_r_task.py  abstract_task.py  diagnostics.py  linear_regression.py  r_diagnostics_utils.R  svm_regression.py
controller/starfish/controller/tasks/ancova/: task.py
controller/starfish/controller/tasks/censored_regression/: task.py
controller/starfish/controller/tasks/cox_proportional_hazards/: task.py
controller/starfish/controller/tasks/federated_unet/: task.py
controller/starfish/controller/tasks/kaplan_meier/: task.py
controller/starfish/controller/tasks/linear_regression/: task.py
controller/tests/: test_unet_integration.py
docs/: architecture.md  cli.md  contributing.md  (+3 more)
router/: CI_CD_PIPELINE.md  README.md  docker-compose.yml  pyproject.toml
router/starfish/: settings.py
router/starfish/agent/: engine.py  hooks.py
router/starfish/agent/prompts/: aggregation.py  scheduling.py  triage.py
router/starfish/agent/strategies/: aggregation.py  scheduling.py  triage.py
router/starfish/agent/tests/: test_aggregation.py  test_engine.py  test_hooks.py  test_models.py  test_prompts.py  test_scheduling.py  test_triage.py
router/starfish/migrations/: 0007_project_agent_config_project_agent_log_run_agent_advice_run_agent_diagnosis.py
router/starfish/router/: models.py  serializers.py  views.py
(+82 files in other folders)
