[tool.poetry]
name = "starfish-cli"
version = "0.1.0"
description = "CLI for Starfish-FL"


[tool.poetry.dependencies]
python = "^3.10"
typer = {version = "0.9.0", extras = ["all"]}
requests = "^2.31"
python-dotenv = "^1.0"
rich = "^13.0"
click = "8.1.7"
anthropic = {version = "^0.52", optional = true}

[tool.poetry.extras]
agent = ["anthropic"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-mock = "^3.12"

[tool.poetry.scripts]
starfish = "starfish_cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"