[tool.poetry]
name = "starfish-controller"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
django = "^4.2.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
django-tables2 = "^2.6.0"
arrow = "^1.2.3"
celery = "^5.3.1"
redis = "^4.6.0"
django-bootstrap-v5 = "^1.0.11"
django-celery-beat = "^2.5.0"
# for ML
numpy = ">=1.26.0,<2.0.0"
scikit-learn = ">=1.3.0"
# for statistical models
statsmodels = ">=0.14.0"
scipy = ">=1.11.0"
# for survival analysis
lifelines = ">=0.29.0"
# for agent hooks (optional)
anthropic = {version = ">=0.52", optional = true}

[tool.poetry.extras]
agent = ["anthropic"]

[tool.poetry.group.unet.dependencies]
tensorflow = "2.15.1"
keras = "2.15.0"
tf-keras = "2.15.0"
segmentation-models = "1.0.1"
Pillow = "10.4.0"
matplotlib = "3.10.8"
nvidia-cublas-cu12 = "12.2.5.6"
nvidia-cuda-cupti-cu12 = "12.2.142"
nvidia-cuda-nvcc-cu12 = "12.2.140"
nvidia-cuda-nvrtc-cu12 = "12.2.140"
nvidia-cuda-runtime-cu12 = "12.2.140"
nvidia-cudnn-cu12 = "8.9.4.25"
nvidia-cufft-cu12 = "11.0.8.103"
nvidia-curand-cu12 = "10.3.3.141"
nvidia-cusolver-cu12 = "11.5.2.141"
nvidia-cusparse-cu12 = "12.1.2.141"
nvidia-nccl-cu12 = "2.16.5"
nvidia-nvjitlink-cu12 = "12.2.140"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
